# QueST

./: .gitignore  LICENSE  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
config/: collect_data.yaml  evaluate.yaml  train_autoencoder.yaml  train_base.yaml  train_fewshot.yaml  train_prior.yaml
config/algo/: act.yaml  base.yaml  bc_transformer.yaml  bet.yaml  data_collect.yaml  diffusion_policy.yaml  quest.yaml
config/algo/aug/: identity.yaml  image.yaml
config/algo/encoder/image/: act_style.yaml  resnet.yaml
config/algo/encoder/lowdim/: mlp.yaml
config/task/: libero_90.yaml  libero_base.yaml  libero_long.yaml  libero_long_fewshot.yaml  metaworld_base.yaml  metaworld_ml45.yaml  metaworld_ml45_prise.yaml  metaworld_ml45_prise_fewshot.yaml
quest/algos/: act.py  base.py  bc_transformer.py  bet.py  diffusion_policy.py  quest.py
quest/algos/baseline_modules/: bc_transformer_modules.py  diffusion_modules.py
quest/algos/quest_modules/: skill_gpt.py  skill_vae.py
quest/algos/utils/: data_augmentation.py  mlp_proj.py  obs_core.py  rgb_modules.py  task_encoders.py
quest/env_runner/: libero_runner.py  metaworld_runner.py
quest/utils/: dataset.py  file_utils.py  frame_stack.py  libero_utils.py  logger.py  metaworld_utils.py  obs_utils.py  tensor_utils.py  utils.py
scripts/: eval.sh  generate_metaworld_dataset.py
scripts/act/: finetune.sh  main.sh
scripts/bc_trans/: finetune.sh  main.sh
scripts/bet/: autoencoder.sh  finetune.sh  main.sh
scripts/dp/: finetune.sh  main.sh
scripts/quest/: autoencoder.sh  finetune.sh  main.sh
(+6 files in other folders)
