[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quest"
version = "0.1.0"
authors = [
    {name = "Atharva Mete", email = "amete7@gatech.edu"},
    {name = "Albert Wilcox", email = "albertwilcox@gatech.edu"},
]
description = "Code for QueST: Self-Supervised Skill Abstractions for Continuous Control"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = {find = {}}